--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10
   url_launcher: ^6.3.1
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
+  # flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
